--- a/app/src/main/res/layout/item_category_product.xml
+++ b/app/src/main/res/layout/item_category_product.xml
@@ -4,7 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="80dp"
     android:layout_height="80dp"
-    android:layout_margin="8dp"
+    android:layout_marginEnd="8dp"
+    android:layout_marginVertical="8dp"
     app:cardCornerRadius="8dp">
 
     <LinearLayout
