--- a/app/src/main/res/layout/layout_header_home.xml
+++ b/app/src/main/res/layout/layout_header_home.xml
@@ -2,7 +2,8 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:paddingBottom="16dp">
 
     <ImageView
         android:id="@+id/iv_settings"
@@ -16,8 +17,8 @@
     <LinearLayout
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
         android:layout_marginEnd="8dp"
+        android:orientation="vertical"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@id/iv_settings"
         app:layout_constraintStart_toStartOf="parent"
@@ -25,21 +26,22 @@
 
         <TextView
             android:id="@+id/tv_delivered_to"
-            android:textStyle="bold"
-            android:text="@string/delivered_to"
-            android:textSize="16sp"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
-        <TextView
-            android:id="@+id/tv_address"
-            android:text="@string/jalan_depok_timur"
-            android:textColor="@color/grey_text"
-            android:textStyle="bold"
-            android:textSize="12sp"
-            android:drawablePadding="4dp"
-            android:gravity="center_vertical"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:text="@string/delivered_to"
+            android:textSize="16sp"
+            android:textStyle="bold" />
+
+        <TextView
+            android:id="@+id/tv_address"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:drawablePadding="4dp"
+            android:gravity="center_vertical"
+            android:text="@string/jalan_depok_timur"
+            android:textColor="@color/grey_text"
+            android:textSize="12sp"
+            android:textStyle="bold"
             app:drawableStartCompat="@drawable/ic_location" />
     </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
