--- a/app/src/main/res/layout/layout_header_home.xml
+++ b/app/src/main/res/layout/layout_header_home.xml
@@ -10,6 +10,7 @@
         android:layout_width="33dp"
         android:layout_height="33dp"
         android:src="@drawable/ic_more"
+        style="@style/iconGridColor"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
