--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -29,4 +29,7 @@
         <item name="colorPrimaryInverse">@color/md_theme_light_inversePrimary</item>
         <item name="fontFamily">@font/font_jakarta</item>
     </style>
+    <style name="iconGridColor">
+        <item name="tint">@color/md_theme_dark_onError</item>
+    </style>
 </resources>
