--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -28,22 +28,33 @@
                 android:id="@+id/rv_category"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:clipToPadding="true"
                 android:nestedScrollingEnabled="true"
                 android:orientation="horizontal"
                 android:visibility="visible"
-                android:clipToPadding="true"
                 app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                 app:layout_constraintTop_toTopOf="parent"
                 tools:listitem="@layout/item_category_product" />
+
+            <Switch
+                android:id="@+id/sw_dark_mode"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginVertical="8dp"
+                android:text="Is Using Dark Mode"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/rv_category" />
 
             <TextView
                 android:id="@+id/tv_title_section_product"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginTop="8dp"
                 android:text="@string/you_might_looking_for"
                 android:textSize="24sp"
                 android:textStyle="bold"
-                app:layout_constraintTop_toBottomOf="@+id/rv_category" />
+                app:layout_constraintTop_toBottomOf="@+id/sw_dark_mode" />
+
 
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/rv_product_list"
